fix: `md-code` padding overlap

--- a/custom.css
+++ b/custom.css
@@ -169,10 +169,6 @@ body.dark-mode .icon {
   transition: 0.25s color;
 }
 
-.md-code:hover {
-  background-color: 
-}
-
 .md-italic {
   background-color: #f6f6f6;
   border: 1px solid #ddd;
@@ -187,6 +183,12 @@ body.dark-mode .icon {
   padding: 10px;
   cursor: pointer;
   max-width: 50%;
+}
+
+a[id^='commit-message-'] {
+  display: inline-block;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
 }
 
 a {
